k8s/06-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-mysql
  namespace: simpleapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-mysql
  template:
    metadata:
      labels:
        app: api-mysql
    spec:
      containers:
        - name: api
          image: silencfox/simpleapi:latest
          ports:
            - containerPort: 3000
