k8s/06-api-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: api-mysql
  namespace: simpleapi
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: api-mysql
  template:
    metadata:
      labels:
        app: api-mysql
    spec:
      containers:
        - name: api
          image: kdvops/api-mysql:latest   # <-- reemplaza si usas otra imagen
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: { duration: 30s }
        - setWeight: 50
        - pause: { duration: 30s }
        - pause: {}   # requieres aprobación manual si usas kubectl argo rollouts promote
      trafficRouting:
        # Cambiar si usas NGINX:
        # nginx: {}
        traefik:
          stableSvc: api-service
          # Un preview service opcional
          canarySvc: api-service-preview
