k8s/07-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: simpleapi
spec:
  selector:
    app: api-mysql
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
